--- a/src/app/search/search-table/search-table.component.html
+++ b/src/app/search/search-table/search-table.component.html
@@ -88,7 +88,11 @@
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
-        <mat-paginator [pageSizeOptions]="[10, 20, 50]" [pageSize]="pageSize" [length]="pageTotal" showFirstLastButtons
+        <mat-paginator 
+            [pageSizeOptions]="[10, 20, 50]" 
+            [pageSize]="pageSize" 
+            [length]="pageTotal" 
+            showFirstLastButtons
             (page)="pageEvent = getServerData($event)"></mat-paginator>
     </div>
 </div>
