--- a/src/app/shared/components/top-bar/sub-bar/sub-bar.component.html
+++ b/src/app/shared/components/top-bar/sub-bar/sub-bar.component.html
@@ -14,7 +14,7 @@
                 <mat-form-field appearance="fill" *ngIf="addDropdown">
                     <mat-label>{{dropdownLabel}}</mat-label>
                     <mat-select [placeholder]="dropdownLabel" [(value)]="selectedOpt">
-                        <mat-option (click)="setOptionToNull()">--</mat-option>
+                        <mat-option (click)="setOptionToNull()">--{{dropdownDefaultOption}}--</mat-option>
                         <mat-option *ngFor="let option of options" [value]="option.id" (click)="setOptionToParent()">
                             {{option.name}}
                         </mat-option>
