--- a/src/app/gateway/gateway-list/gateway-list.component.html
+++ b/src/app/gateway/gateway-list/gateway-list.component.html
@@ -3,10 +3,10 @@
 </app-top-bar>
 
 <div class="jumbotron m-md-4 p-md-3">
-  <app-sub-bar [component]="true" [addDropdown]="true" [options]="organisations"
-    [dropdownLabel]="'GATEWAY.DROPDOWNFILTER' | translate" (updateSelectedOpt)="filterGateway($event)"
+  <app-top-bar-table [component]="true" [addDropdown]="true" [options]="organisations"
+    [dropdownLabel]="'GATEWAY.DROPDOWNFILTER' | translate" (updateSelectedOpt)="filterGatewayByOrgId($event)"
     [dropdownDefaultOption]="'GATEWAY.DROPDOWNDEFAULT' | translate">
-  </app-sub-bar>
+  </app-top-bar-table>
   <mat-tab-group animationDuration="200ms" (selectedTabChange)="showMap($event)">
     <mat-tab label="{{'GATEWAY.TABEL-TAB' | translate}}">
       <div class="m-md-4 p-md-3">
@@ -16,7 +16,7 @@
       </div>
     </mat-tab>
     <mat-tab label="{{'GATEWAY.MAP-TAB' | translate}}">
-      <div *ngIf="showmap && gateways">
+      <div class="m-md-4 p-md-3" *ngIf="showmap && gateways">
         <app-map [coordinateList]="coordinateList">
         </app-map>
       </div>
