--- a/src/app/applications/applications-list/applications-list.component.html
+++ b/src/app/applications/applications-list/applications-list.component.html
@@ -2,7 +2,7 @@
   [ctaRouterLink]="'new-application'" (updatePageLimit)="updatePageLimit($event)">
 </app-top-bar>
 
-<div class="m-md-4 p-md-3">
+<div class="page">
   <app-applications-table [applications]="applications" (deleteApplication)="deleteApplication($event)"
     [isLoadingResults]="isLoadingResults">
   </app-applications-table>
