--- a/src/app/applications/datatarget/datatarget-list/datatarget-list.component.html
+++ b/src/app/applications/datatarget/datatarget-list/datatarget-list.component.html
@@ -1,8 +1,8 @@
-<app-top-bar [pageLimit]="pageLimit" [title]="title"
-  [ctaLabel]="'FORM.CREATE-NEW-DATATARGET' | translate" [ctaRouterLink]="'datatarget-edit'"
-  (updatePageLimit)="updatePageLimit($event)" [backButtonTitle]="'NAV.APPLICATION' | translate">
+<app-top-bar [pageLimit]="pageLimit" [title]="title" [ctaLabel]="'FORM.CREATE-NEW-DATATARGET' | translate"
+  [ctaRouterLink]="'datatarget-edit'" (updatePageLimit)="updatePageLimit($event)"
+  [backButtonTitle]="'NAV.APPLICATION' | translate">
 </app-top-bar>
 
-<div class="m-md-4 p-md-3">
+<div class="page">
   <app-datatarget-table [pageLimit]="pageLimit"></app-datatarget-table>
 </div>
