--- a/src/app/profiles/profiles-list/profiles-list.component.html
+++ b/src/app/profiles/profiles-list/profiles-list.component.html
@@ -1,8 +1,8 @@
 <app-top-bar [showSelectedSort]="false" [title]="'PROFILES.NAME' | translate"></app-top-bar>
 
-<div class=" jumbotron m-md-4 p-md-3">
+<div class=" jumbotron">
     <app-service-profiles-list></app-service-profiles-list>
 </div>
-<div class=" jumbotron m-md-4 p-md-3">
+<div class=" jumbotron">
     <app-device-profiles-list></app-device-profiles-list>
 </div>
