--- a/src/app/sigfox/sigfox-groups-detail/sigfox-groups-detail.component.html
+++ b/src/app/sigfox/sigfox-groups-detail/sigfox-groups-detail.component.html
@@ -1,6 +1,7 @@
-<app-top-bar [showSelectedSort]="false" backButtonTitle="{{'SIGFOX-GROUP.SIGFOX-GROUP' | translate}}" [title]="'SIGFOX-GROUP.PROFILES.NAME' | translate"></app-top-bar>
+<app-top-bar [showSelectedSort]="false" backButtonTitle="{{'SIGFOX-GROUP.SIGFOX-GROUP' | translate}}"
+    [title]="'SIGFOX-GROUP.PROFILES.NAME' | translate"></app-top-bar>
 
-<div class=" jumbotron m-md-4 p-md-3">
+<div class=" jumbotron">
     <div class="row mt-5">
         <div class="col-6">
             <h4>{{'SIGFOX-GROUP.PROFILES.DEVICE-TYPE' | translate}}</h4>
