--- a/src/app/sigfox/sigfox-groups-list/sigfox-groups-list.component.html
+++ b/src/app/sigfox/sigfox-groups-list/sigfox-groups-list.component.html
@@ -1,6 +1,6 @@
 <app-top-bar [showSelectedSort]="false" [title]="'SIGFOX-GROUP.ADMINISTRATION.NAME' | translate"></app-top-bar>
 
-<div class=" jumbotron m-md-4 p-md-3">
+<div class=" jumbotron">
     <div class="row mt-5">
         <div class="col-6">
             <h4>Liste over grupper</h4>
