--- a/src/app/admin/organisation/organisation-list/organisation-list.component.html
+++ b/src/app/admin/organisation/organisation-list/organisation-list.component.html
@@ -1,9 +1,7 @@
-<app-top-bar 
-    [title]="'NAV.ORGANISATIONS' | translate" 
-    [ctaLabel]="'ORGANISATION.FORM.CREATE-NEW-ORGANISATION' | translate" 
-    [ctaRouterLink]="'new-organisation'">
+<app-top-bar [title]="'NAV.ORGANISATIONS' | translate"
+    [ctaLabel]="'ORGANISATION.FORM.CREATE-NEW-ORGANISATION' | translate" [ctaRouterLink]="'new-organisation'">
 </app-top-bar>
 
-<div class="m-md-4 p-md-3">
+<div class="page">
     <app-organisation-tabel></app-organisation-tabel>
 </div>
