--- a/src/app/admin/permission/permission-list/permission-list.component.html
+++ b/src/app/admin/permission/permission-list/permission-list.component.html
@@ -1,7 +1,7 @@
 <app-top-bar [sort]="sort" [pageLimit]="pageLimit" [title]="'NAV.PERMISSIONS' | translate"
     [ctaLabel]="'FORM.CREATE-NEW-PERMISSION' | translate" [ctaRouterLink]="'new-permission'"></app-top-bar>
 
-<div class="m-md-4 p-md-3">
+<div class="page">
     <app-permission-tabel [permissions]="permissions" (deletePermission)="deletePermission($event)"
         [isLoadingResults]="isLoadingResults">
     </app-permission-tabel>
