--- a/src/app/admin/users/user-detail/user-detail.component.html
+++ b/src/app/admin/users/user-detail/user-detail.component.html
@@ -1,6 +1,6 @@
 <app-top-bar *ngIf="user" [data]="user" [backButton]="backButton" [subPage]="true"></app-top-bar>
 
-<div class=" jumbotron m-md-4 p-md-3" *ngIf="user">
+<div class=" jumbotron" *ngIf="user">
     <div class="row">
         <div class="col-xs-12">
             <div class="float-left">
@@ -37,7 +37,7 @@
     </div>
 </div>
 
-<div class="jumbotron m-md-4 p-md-3">
+<div class="jumbotron">
     <h4 class="">
         {{ 'USERS.DETAIL.PERMISSIONS' | translate }}
     </h4>
