--- a/src/app/gateway/gateway-list/gateway-list.component.html
+++ b/src/app/gateway/gateway-list/gateway-list.component.html
@@ -2,21 +2,21 @@
   [ctaLabel]="'FORM.CREATE-NEW-LORA-GATEWAY' | translate" [ctaRouterLink]="'gateway-edit'">
 </app-top-bar>
 
-<div class="jumbotron m-md-4 p-md-3">
+<div class="jumbotron">
   <app-top-bar-table [component]="true" [addDropdown]="true" [options]="organisations"
     [dropdownLabel]="'GATEWAY.DROPDOWNFILTER' | translate" (updateSelectedOpt)="filterGatewayByOrgId($event)"
     [dropdownDefaultOption]="'GATEWAY.DROPDOWNDEFAULT' | translate">
   </app-top-bar-table>
   <mat-tab-group animationDuration="200ms" (selectedTabChange)="showMap($event)">
     <mat-tab label="{{'GATEWAY.TABEL-TAB' | translate}}">
-      <div class="m-md-4 p-md-3">
+      <div class="page">
         <app-gateway-table [gateways]="gateways" [isLoadingResults]="isLoadingResults"
           (deleteGateway)="deleteGateway($event)">
         </app-gateway-table>
       </div>
     </mat-tab>
     <mat-tab label="{{'GATEWAY.MAP-TAB' | translate}}">
-      <div class="m-md-4 p-md-3" *ngIf="showmap && gateways">
+      <div class="page" *ngIf="showmap && gateways">
         <app-map [coordinateList]="coordinateList">
         </app-map>
       </div>
