--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,6 +1,6 @@
 <app-top-bar [title]="'NAV.SEARCH' | translate" [searchQuery]="query"></app-top-bar>
 
-<div class="m-md-4 p-md-3">
+<div class="page">
     <app-search-table [searchText]="decode(query)">
     </app-search-table>
 </div>
