--- a/src/assets/scss/setup/_typography.scss
+++ b/src/assets/scss/setup/_typography.scss
@@ -13,7 +13,6 @@ h5,
 p,
 a {
   font-family: "Roboto";
-  margin-bottom: 0 !important;
 }
 
 /*####################### HEADLINE #########################*/
@@ -88,6 +87,19 @@ a {
   }
 }
 
+@mixin h6 {
+  @extend .mb-4;
+  font-family: $font-name;
+  font-size: 1rem;
+  line-height: 1.2;
+  font-weight: 500;
+  color: $color-text;
+
+  strong {
+    font-weight: $font-weight-medium;
+  }
+}
+
 @mixin body-text {
   font-family: $font-name;
   font-size: $body-text;
@@ -139,6 +151,10 @@ h5,
   @include h5;
 }
 
+h6, .h6{
+  @include h6;
+}
+
 h1+h4 {
   margin-top: calculateRem(-16);
 }
@@ -148,11 +164,15 @@ body,
 .body-text {
   @include body-text;
   letter-spacing: $letter-spacing;
+  @extend .mb-3;
 }
 
 p {
   strong {
-    font-weight: $font-weight-bold;
+    @include h6;
+    line-height: none;
+    @extend .mr-3;
+
   }
 
 }
