IOT-985 refactor deviceprofile to use errormessageservice, add translate pipe to error

--- a/src/app/profiles/device-profiles/device-profiles-edit/device-profiles-edit.component.html
+++ b/src/app/profiles/device-profiles/device-profiles-edit/device-profiles-edit.component.html
@@ -5,11 +5,11 @@
         <ul class="mb-0">
             <div *ngIf="errorMessages">
                 <li *ngFor="let error of errorMessages">
-                    {{error}}
+                    {{error | translate}}
                 </li>
             </div>
             <li *ngIf="errorMessage">
-                {{errorMessage}}
+                {{errorMessage | translate}}
             </li>
         </ul>
     </div>
