--- a/src/app/applications/iot-devices/iot-device-detail/device-model/device-model.component.html
+++ b/src/app/applications/iot-devices/iot-device-detail/device-model/device-model.component.html
@@ -1,4 +1,11 @@
 <h3>{{ 'IOTDEVICE.DEVICEMODEL' | translate }}</h3>
-<ngx-monaco-editor *ngIf="deviceModel" class="middle-editor" [options]="editorJsonOutpuOptions"
+<div>
+
+</div>
+<ngx-monaco-editor *ngIf="deviceModel; else noDeviceModel" class="middle-editor" [options]="editorJsonOutpuOptions"
     [(ngModel)]="deviceModel" [ngModelOptions]="{standalone: true}">
 </ngx-monaco-editor>
+
+<ng-template #noDeviceModel>
+    <p class="mt-3">{{ 'IOTDEVICE.DEVICEMODEL-ERROR' | translate }}</p>
+</ng-template>
