--- a/src/assets/scss/setup/_variables.scss
+++ b/src/assets/scss/setup/_variables.scss
@@ -150,7 +150,7 @@ $color-grey-009: rgba(196, 203, 207, 1) !default;
 $color-blue-001: rgba(0, 159, 223, 1) !default;
 $color-blue-002: rgba(0, 159, 223, 0.75) !default;
 $color-blue-003: rgba(0, 159, 223, 0.5) !default;
-$color-blue-004: rgba(0, 159, 223, 0.25) !default;
+$color-blue-004: rgba(63, 192, 243, 0.164) !default;
 
 $color-green-001: rgba(47, 121, 100, 1) !default;
 $color-green-002: rgba(47, 121, 100, 0.75) !default;
@@ -239,8 +239,8 @@ $color-text-black: $color-base-002 !default;
 $color-bg-normal: $color-white-001 !default;
 $color-bg-primary: $color-primary !default;
 $color-bg-primary-layer: $color-black-002 !default;
-$color-bg-secondary: $color-white-001 !default;
-$color-bg-alternative: $color-light-green-001 !default;
+$color-bg-secondary: $color-white-001!default;
+$color-bg-alternative: $color-blue-004 !default;
 
 //Icons color
 $color-Icons-primary: $color-primary !default;
@@ -267,7 +267,8 @@ $color-border-hover: $color-black-002;
 $color-border-light: $color-white-004 !default;
 $color-border-black: $color-black-002 !default;
 $color-border-red: $color-red-002 !default;
-$color-border-green: $color-green-002 !default;
+$color-border-success: $color-green-002 !default;
+$color-border-info: $color-blue-002 !default; 
 
 //Borders
 $border-width: 5px;
@@ -276,9 +277,10 @@ $border-radius-primary: 0.25rem;
 $border-radius-secondary: 20px;
 $outer-border: $border-width-small solid $color-border;
 $inner-border: $border-width solid lighten($color-border, 50%);
-$focus-border: $border-width solid $color-border-green;
+$focus-border: $border-width solid $color-border;
 $focus-outline: $border-width solid $color-border;
-$warning-border: $border-width solid $color-border-red;
+$warning-border: $border-width-small solid $color-border-red;
+$info-border: $border-width-small solid $color-border-info;
 $border-input: $border-width-small solid $color-border;
 $border-input-focus: $border-width-small solid $color-border-focus;
 $border-input-hover: $border-width-small solid $color-border-hover;
