--- a/src/app/gateway/gateway-detail/gateway-detail.component.html
+++ b/src/app/gateway/gateway-detail/gateway-detail.component.html
@@ -1,12 +1,41 @@
 <app-top-bar *ngIf="gateway" [data]="gateway" [backButton]="backButton" [subPage]="true"></app-top-bar>
-
-<div class=" jumbotron" *ngIf="gateway">
-    <div class="row">
-        <div class="col-md-8">
-            <h4>{{ 'GATEWAY.ID' | translate }}</h4>
-            <p class="mb-5">{{gateway.id}}</p>
+<div class="row" *ngIf="gateway">
+    <div class="col-md-6 d-flex align-items-stretch">
+        <div class="jumbotron jumbotron--m-right">
+            <p><strong>{{ 'GATEWAY.ID' | translate }}</strong>{{gateway.id}}</p>
+            <p><strong>{{ 'GATEWAY.ORGANIZATION' | translate }}</strong>{{gateway.internalOrganizationName}}</p>
+            <p><strong>{{ 'GATEWAY.TAGS' | translate }}</strong>{{gateway.tagsString}}</p>
+            <p *ngIf="gateway.description">
+                <strong>{{ 'GATEWAY.DESCRIPTION' | translate }}</strong>{{gateway.description}}</p>
         </div>
-        <div class="col-md-4 order-first order-md-last" *ngIf="gateway.canEdit">
+    </div>
+    <div class="col-md-6 d-flex align-items-stretch">
+        <div class="jumbotron jumbotron--m-left">
+            <div *ngIf="gateway.location; else locationElseBlock">
+                <h3>{{ 'GATEWAY.LOCATION' | translate }}</h3>
+                <app-map [coordinates]="getCoordinates()"></app-map>
+                <div class="row">
+                    <div class="col-4">
+                        <p><strong>{{ 'GATEWAY.LONGITUDE' | translate }}</strong>
+                            {{gateway.location?.longitude | number:'2.1-6'}}</p>
+                    </div>
+                    <div class="col-4">
+                        <p><strong>{{ 'GATEWAY.LATITUDE' | translate }}</strong>
+                            {{gateway.location.latitude | number:'2.1-6'}}</p>
+                    </div>
+                    <div class="col-4">
+                        <p><strong>{{ 'GATEWAY.ALTITUDE' | translate }}</strong>
+                            {{gateway.location.altitude}}</p>
+                    </div>
+                </div>
+            </div>
+            <ng-template #locationElseBlock>
+                <p class="mb-5">{{ 'GATEWAY.NOLOCATION' | translate}}</p>
+            </ng-template>
+        </div>
+    </div>
+</div>
+<!-- <div class="col-md-4 order-first order-md-last" *ngIf="gateway.canEdit">
             <div class="btn-group float-md-right dropdown">
                 <button type="button" id="dropdown-{{ gateway.name }}" class="btn btn-primary dropdown-toggle"
                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -24,65 +53,35 @@
                     </li>
                 </ul>
             </div>
-        </div>
-    </div>
-    <div>
-        <div class="col-md-8">
-            <h4>{{ 'GATEWAY.ORGANIZATION' | translate }}</h4>
-            <p class="mb-5">{{gateway.internalOrganizationName}}</p>
-        </div>
-    </div>
-    <h4 *ngIf="gateway.description">{{ 'GATEWAY.DESCRIPTION' | translate }}</h4>
-    <p *ngIf="gateway.description" class="mb-5">{{gateway.description}}</p>
-    <div *ngIf="gateway.location; then locationThenBlock else locationElseBlock"></div>
-    <ng-template #locationThenBlock>
-        <div class="row">
-            <div class="mb-5 col-2">
-                <h4>{{ 'GATEWAY.LOCATION' | translate }}</h4>
+        </div> -->
+<div class="row" *ngIf="gateway">
+    <div class="col-md-6 d-flex align-items-stretch">
+        <div class="jumbotron jumbotron--m-right">
+            <h3>{{ 'GATEWAY.STATS' | translate }}</h3>
+            <div class="mat-elevation-z8">
+                <table mat-table [dataSource]="dataSource">
+                    <ng-container matColumnDef="rxPacketsReceived">
+                        <th mat-header-cell *matHeaderCellDef>{{ 'GATEWAY.STATS-RXPACKETSRECEIVED' | translate }}</th>
+                        <td mat-cell *matCellDef="let element">{{element.rxPacketsReceived}}</td>
+                    </ng-container>
 
-                <h6>{{ 'GATEWAY.LONGITUDE' | translate }}</h6>
-                <p>{{gateway.location?.longitude}}</p>
+                    <ng-container matColumnDef="txPacketsEmitted">
+                        <th mat-header-cell *matHeaderCellDef>{{ 'GATEWAY.STATS-TXPACKETSEMITTED' | translate }}</th>
+                        <td mat-cell *matCellDef="let element">{{element.txPacketsEmitted}}</td>
+                    </ng-container>
 
-                <h6>{{ 'GATEWAY.LATITUDE' | translate }}</h6>
-                <p>{{gateway.location.latitude}}</p>
+                    <ng-container matColumnDef="txPacketsReceived">
+                        <th mat-header-cell *matHeaderCellDef>{{ 'GATEWAY.STATS-TIMESTAMP' | translate }}</th>
+                        <td mat-cell *matCellDef="let element">{{element.timestamp | date}}</td>
+                    </ng-container>
 
-                <h6>{{ 'GATEWAY.ALTITUDE' | translate }}</h6>
-                <p>{{gateway.location.altitude}}</p>
-
+                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                </table>
+                <mat-paginator [pageSizeOptions]="[5, 10, 20]" [pageSize]="pageSize" [length]="resultsLength"
+                    showFirstLastButtons>
+                </mat-paginator>
             </div>
-            <div class="col-10" *ngIf="this.gateway.location">
-                <app-map [coordinates]="getCoordinates()"></app-map>
-            </div>
         </div>
-    </ng-template>
-    <ng-template #locationElseBlock>
-        <p class="mb-5">{{ 'GATEWAY.NOLOCATION' | translate}}</p>
-    </ng-template>
-    <h4>{{ 'GATEWAY.TAGS' | translate }}</h4>
-    <p class="mb-5">{{gateway.tagsString}}</p>
-</div>
-<div class=" jumbotron">
-    <h4>{{ 'GATEWAY.STATS' | translate }}</h4>
-    <div class="mat-elevation-z8">
-        <table mat-table [dataSource]="dataSource">
-            <ng-container matColumnDef="rxPacketsReceived">
-                <th mat-header-cell *matHeaderCellDef>{{ 'GATEWAY.STATS-RXPACKETSRECEIVED' | translate }}</th>
-                <td mat-cell *matCellDef="let element">{{element.rxPacketsReceived}}</td>
-            </ng-container>
-
-            <ng-container matColumnDef="txPacketsEmitted">
-                <th mat-header-cell *matHeaderCellDef>{{ 'GATEWAY.STATS-TXPACKETSEMITTED' | translate }}</th>
-                <td mat-cell *matCellDef="let element">{{element.txPacketsEmitted}}</td>
-            </ng-container>
-
-            <ng-container matColumnDef="txPacketsReceived">
-                <th mat-header-cell *matHeaderCellDef>{{ 'GATEWAY.STATS-TIMESTAMP' | translate }}</th>
-                <td mat-cell *matCellDef="let element">{{element.timestamp | date}}</td>
-            </ng-container>
-
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
-        <mat-paginator [pageSizeOptions]="[5, 10, 20]" [pageSize]="pageSize" showFirstLastButtons></mat-paginator>
     </div>
 </div>
