--- a/src/app/gateway/gateway-detail/gateway-detail.component.html
+++ b/src/app/gateway/gateway-detail/gateway-detail.component.html
@@ -55,7 +55,7 @@
             </div>
         </div> -->
 <div class="row" *ngIf="gateway">
-    <div class="col-md-6 d-flex align-items-stretch">
+    <div class="col-12">
         <div class="jumbotron jumbotron--m-right">
             <h3>{{ 'GATEWAY.STATS' | translate }}</h3>
             <div class="mat-elevation-z8">
