IOT-917 add sigfox downlink limit, rename SigFox to Sigfox.

--- a/src/app/applications/iot-devices/iot-device-detail/downlink/downlink.component.html
+++ b/src/app/applications/iot-devices/iot-device-detail/downlink/downlink.component.html
@@ -22,8 +22,11 @@
         <div class="mt-5 clearfix col-4">
             <label for="data"
                 class="form-label asterisk-if-mandatory">{{'IOTDEVICE.DOWNLINK.PAYLOAD' | translate}}</label>
-            <input type="data" class="form-control" placeholder="{{'IOTDEVICE.DOWNLINK.PAYLOAD' | translate}}" id="data" name="data" pattern="[a-fA-F\d]+" maxlength="device.type === 'SIGFOX' ? 16 : ''"
+            <input type="data" class="form-control" placeholder="{{'IOTDEVICE.DOWNLINK.PAYLOAD' | translate}}" id="data" name="data" pattern="[a-fA-F\d]+" [maxlength]="getMaxDownloadLength()"
                 required [(ngModel)]="downlink.data">
+        </div>
+        <div *ngIf="device.type === 'SIGFOX'" class="mt-1">
+            <p>{{'IOTDEVICE.DOWNLINK.SIGFOX-PAYLOAD-LENGTH' | translate}}</p>
         </div>
         <div class="mt-5 clearfix">
             <button (click)="clickDownlink()" class="btn btn-secondary" type="button">{{ 'IOTDEVICE.DOWNLINK.START' | translate}}</button>
