--- a/src/app/device-model/device-model-detail/device-model-detail.component.html
+++ b/src/app/device-model/device-model-detail/device-model-detail.component.html
@@ -1,9 +1,10 @@
 <ng-container>
     <app-top-bar [title]="title" [backButton]="backButton" [subPage]="true"></app-top-bar>
 </ng-container>
-<div class="jumbotron my-4 m-md-4 py-3 p-md-3" *ngIf="deviceModel">
-    <div class="col-md-12 order-first order-md-last ">
-        <div class="btn-group float-md-right dropdown">
+<div class="row" *ngIf="deviceModel">
+    <div class="col-12">
+        <div class="jumbotron">
+            <!-- <div class="btn-group float-md-right dropdown">
             <button type="button" id="dropdown-{{ deviceModel.body.name }}" class="btn btn-primary dropdown-toggle"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 {{'DEVICE-MODEL.SHOW-OPTIONS' | translate}} <span class="caret"></span>
@@ -18,43 +19,33 @@
                     </a>
                 </li>
             </ul>
+        </div> -->
+
+            <p><strong>{{ 'DEVICE-MODEL.NAME' | translate }}</strong>{{deviceModel.body.name}}</p>
+            <p *ngIf="deviceModel.createdAt">
+                <strong>{{ 'DEVICE-MODEL.CREATED' | translate }}</strong>{{deviceModel.createdAt | dkTime}}<span
+                    *ngIf="deviceModel.createdByName">{{deviceModel.createdByName | createdUpdatedBy}}</span>
+            </p>
+            <p *ngIf="deviceModel.createdAt !== deviceModel.updatedAt">
+                <strong>{{ 'DEVICE-MODEL.UPDATED' | translate }}</strong>{{deviceModel.updatedAt | dkTime}}
+                <span *ngIf="deviceModel.updatedByName">
+                    {{deviceModel.updatedByName | createdUpdatedBy}} </span>
+            </p>
+            <p><strong>{{ 'DEVICE-MODEL.ID' | translate }}</strong>{{deviceModel.body.id}}</p>
+            <p><strong>{{ 'DEVICE-MODEL.BRANDNAME' | translate }}</strong>{{deviceModel.body.brandName}}</p>
+            <p><strong>{{ 'DEVICE-MODEL.MODELNAME' | translate }}</strong>{{deviceModel.body.modelName}}</p>
+            <p><strong>{{ 'DEVICE-MODEL.MANUFACTURERNAME' | translate }}</strong>{{deviceModel.body.manufacturerName}}
+            </p>
+            <p><strong>{{ 'DEVICE-MODEL.CONTROLLEDPROPERTY' | translate }}</strong>{{deviceModel.body.controlledProperty}}
+            </p>
+            <p><strong>{{ 'DEVICE-MODEL.CATEGORY' | translate }}</strong>{{deviceModel.body.category}}</p>
+            <p><strong>{{ 'DEVICE-MODEL.SUPPORTEDUNITS' | translate }}</strong>{{deviceModel.body.supportedUnits}}</p>
+            <p><strong>{{ 'DEVICE-MODEL.FUNCTION' | translate }}</strong>{{deviceModel.body.function}}</p>
+            <p><strong>{{ 'DEVICE-MODEL.ENERGYLIMITATIONCLASS' | translate }}</strong>{{deviceModel.body.energyLimitationClass}}
+            </p>
+            <p><strong>{{ 'DEVICE-MODEL.SUPPORTEDPROTOCOL' | translate }}</strong>{{deviceModel.body.supportedProtocol}}
+            </p>
         </div>
-    </div>
 
-    <div class="row">
-        <div class="col-12">
-            <h4>{{ 'DEVICE-MODEL.NAME' | translate }}</h4>
-            <p class="mb-5">{{deviceModel.body.name}}</p>
-
-            <h4>{{ 'DEVICE-MODEL.ID' | translate }}</h4>
-            <p class="mb-5">{{deviceModel.body.id}}</p>
-
-            <h4>{{ 'DEVICE-MODEL.BRANDNAME' | translate }}</h4>
-            <p class="mb-5">{{deviceModel.body.brandName}}</p>
-
-            <h4>{{ 'DEVICE-MODEL.MODELNAME' | translate }}</h4>
-            <p class="mb-5">{{deviceModel.body.modelName}}</p>
-
-            <h4>{{ 'DEVICE-MODEL.MANUFACTURERNAME' | translate }}</h4>
-            <p class="mb-5">{{deviceModel.body.manufacturerName}}</p>
-
-            <h4>{{ 'DEVICE-MODEL.CONTROLLEDPROPERTY' | translate }}</h4>
-            <p class="mb-5">{{deviceModel.body.controlledProperty}}</p>
-
-            <h4>{{ 'DEVICE-MODEL.CATEGORY' | translate }}</h4>
-            <p class="mb-5">{{deviceModel.body.category}}</p>
-
-            <h4>{{ 'DEVICE-MODEL.SUPPORTEDUNITS' | translate }}</h4>
-            <p class="mb-5">{{deviceModel.body.supportedUnits}}</p>
-
-            <h4>{{ 'DEVICE-MODEL.FUNCTION' | translate }}</h4>
-            <p class="mb-5">{{deviceModel.body.function}}</p>
-
-            <h4>{{ 'DEVICE-MODEL.ENERGYLIMITATIONCLASS' | translate }}</h4>
-            <p class="mb-5">{{deviceModel.body.energyLimitationClass}}</p>
-
-            <h4>{{ 'DEVICE-MODEL.SUPPORTEDPROTOCOL' | translate }}</h4>
-            <p class="mb-5">{{deviceModel.body.supportedProtocol}}</p>
-        </div>
     </div>
 </div>
